// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileInfoActionTile should render correctly 1`] = `
<Styled(TouchableOpacity)
  onPress={[Function]}
>
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    resizeMode="contain"
    source="/test"
    title="test"
    url=""
  />
  <View>
    <Styled(BodyCopy)
      fontSize="fs16"
      fontWeight="semibold"
      text="test"
      textAlign="center"
    />
    <Styled(BodyCopy)
      fontSize="fs14"
      text="test"
      textAlign="center"
    />
  </View>
</Styled(TouchableOpacity)>
`;

exports[`ProfileInfoActionTile should render correctly when activityCompletionState is present 1`] = `
<Styled(TouchableOpacity)
  onPress={[Function]}
>
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    source={
      Object {
        "testUri": "../../../../core/src/assets/done.png",
      }
    }
    title="test"
    url=""
  />
  <Styled(Styled(ImageComp))
    alt="test"
    host=""
    resizeMode="contain"
    source="/test"
    title="test"
    url=""
  />
  <View>
    <Styled(BodyCopy)
      fontSize="fs16"
      fontWeight="semibold"
      text="added"
      textAlign="center"
    />
    <Styled(BodyCopy)
      fontSize="fs14"
      text="test"
      textAlign="center"
    />
  </View>
</Styled(TouchableOpacity)>
`;
